tests/compile_fail/declare_scheduler_whitespace_name.stderr
error: declare_scheduler!: `name` must contain at least one visible character (empty, whitespace-only, and invisible-only literals are rejected)
 --> tests/compile_fail/declare_scheduler_whitespace_name.rs:8:12
  |
8 |     name = "   ",
  |            ^^^^^
